scss: fix #the-expans-app overflow hidden selector

--- a/src/global.css
+++ b/src/global.css
@@ -7,6 +7,6 @@ body,
   width: 100%;
 }
 
-#the-expans-app {
+#the-expans--app {
   overflow: hidden;
 }
